# ttsbench

./: .gitignore  CLAUDE.md  deploy.sh  pyproject.toml
backend/: main.py  storage.py
backend/analysis/: bandwidth.py  base.py  buzzing.py  clicks.py  noise.py  pipeline.py  pitch_contour.py  robotic.py  smoothing.py
docs/: scoring.md
frontend/: app.js  docs.js  index.html  style.css
